objects/Visit_Planner__c/Visit_Planner__c.object-meta.xml
<CustomObject>
    <label>Visit Planner</label>
    <nameField>
        <label>Visit Planner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Planners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>