objects/Visit_Planner__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <formula>DISTANCE( GEOLOCATION( Start_Location__Latitude__s , Start_Location__Longitude__s ) , GEOLOCATION( End_Location__Latitude__s , End_Location__Longitude__s ) , &apos;km&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>