objects/Visit_Planner__c/fields/End_Location__c.field-meta.xml
<CustomField>
    <fullName>End_Location__c</fullName>
    <label>End Location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>