objects/Visit_Planner__c/fields/Map_Location__c.field-meta.xml
<CustomField>
    <fullName>Map_Location__c</fullName>
    <label>Map Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>