objects/Visit_Planner__c/fields/Start_Location__c.field-meta.xml
<CustomField>
    <fullName>Start_Location__c</fullName>
    <label>Start Location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>