objects/Visit_Planner__c/fields/Start_Time_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_Date__c</fullName>
    <label>Start Time &amp; Date</label>
    <type>DateTime</type>
</CustomField>