objects/Visit_Planner__c/fields/Total_Distance_km__c.field-meta.xml
<CustomField>
    <fullName>Total_Distance_km__c</fullName>
    <label>Total Distance (km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>