objects/Visit_Planner__c/fields/Visit_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Visit_Approved_By__c</fullName>
    <label>Visit Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>