objects/Visit_Planner__c/fields/Visit_Approver_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Visit_Approver_s_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Approver&apos;s Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visit_Planners1</relationshipName>
    <type>Lookup</type>
</CustomField>