objects/Visit_Planner__c/fields/Visit_Status__c.field-meta.xml
<CustomField>
    <fullName>Visit_Status__c</fullName>
    <label>Visit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Ended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>