objects/Visit_Planner__c/listViews/All_Visits.listView-meta.xml
<ListView>
    <fullName>All_Visits</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Visit Planners</label>
</ListView>